--- a/code/package.json
+++ b/code/package.json
@@ -14,8 +14,9 @@
     "@emotion/styled": "^11.8.1",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.9",
+    "git": "^0.1.5",
     "millify": "^4.0.0",
-    "next": "12.1.4",
+    "next": "^12.1.5-canary.4",
     "nprogress": "^0.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
