--- a/code/package.json
+++ b/code/package.json
@@ -21,7 +21,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-horizontal-scrolling-menu": "^2.7.1",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.12.0",
